tests/ui/parser/recover/recover-pat-lets.stderr
error: expected a pattern, found an expression
  --> $DIR/recover-pat-lets.rs:4:14
   |
LL |     let Some(1 + 1) = x else {
   |     ---------^^^^^-----------
   |     |        |
   |     |        arbitrary expressions are not allowed in patterns
   |     help: use an `if`: `if x != Some(1 + 1)`

error: aborting due to 1 previous error

